[package]
name = "modeling"
version = "0.1.0"
authors = ["go"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.26"
structopt = "0.3.22"
itertools = "0.10.1"
env_logger = "0.9.0"

chrono = "0.4.19"
log = "0.4.14"
futures = { version = "0.3.16", features = ["thread-pool"] }

rayon = "1.5.1"
tokio = { version = "1.10.0", features = ["full"] }

image = "0.23.14"
tobj = "3.2.0"
cgmath = "0.18.0"
gltf = { version = "0.16.0", features = ["utils", "names"] }

winit = { version = "0.25.0", features = ["web-sys"] }
wgpu = { version = "0.10.1", features = ["spirv"] }
bytemuck = { version = "1.7.2", features = ["derive"] }

egui = "0.13.1"
egui_wgpu_backend = "0.11.0"
egui_winit_platform = "0.9.0"
epi = "0.13.0"
egui_demo_lib = "0.13.0"
owning_ref = "0.4.1"


[build-dependencies]
anyhow = "1.0.43"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.1"
shaderc = "0.7.3"


[dev-dependencies]
log = "0.4.14"
